--- a/new-retail-auth/src/main/resources/bootstrap.yml
+++ b/new-retail-auth/src/main/resources/bootstrap.yml
@@ -12,6 +12,9 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+  redis:
+    host: localhost
+    port: 6379
 my:
   name: zhangsan
   age: 20
