--- a/new-retail-auth/src/main/resources/bootstrap.yml
+++ b/new-retail-auth/src/main/resources/bootstrap.yml
@@ -15,6 +15,11 @@ spring:
   redis:
     host: localhost
     port: 6379
+    lettuce:
+      pool:
+        max-active: 24
+        max-idle: 24
+        min-idle: 12
 my:
   name: zhangsan
   age: 20
