--- a/new-retail-common/new-retail-common-security/pom.xml
+++ b/new-retail-common/new-retail-common-security/pom.xml
@@ -17,6 +17,18 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- JWT -->
         <dependency>
             <groupId>com.auth0</groupId>
@@ -29,12 +41,6 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.5.8</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.zhihao</groupId>
-            <artifactId>new-retail-common-redis</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
