feat(CouponsFeignService):getCouponsApi and listCouponsApi

--- a/new-retail-service/new-retail-service-user/pom.xml
+++ b/new-retail-service/new-retail-service-user/pom.xml
@@ -31,6 +31,12 @@
 
         <dependency>
             <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-api-coupons</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-security</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
