--- a/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
@@ -27,3 +27,9 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: classpath*:mapper/*.xml
+product:
+  thread-pool:
+    core-pool-size: 12
+    max-pool-size: 24
+    work-queue-size: 1000
+    keep-alive-seconds: 300
