--- a/new-retail-service/new-retail-service-cart/pom.xml
+++ b/new-retail-service/new-retail-service-cart/pom.xml
@@ -30,6 +30,18 @@
         </dependency>
 
         <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-api-product</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
