--- a/new-retail-service/new-retail-service-cart/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-cart/src/main/resources/bootstrap.yml
@@ -12,3 +12,7 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+  redis:
+    host: localhost
+    port: 6379
+    database: 1
