--- a/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
@@ -12,6 +12,8 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/new_retail_order?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
@@ -23,6 +25,10 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
+  redis:
+    host: localhost
+    port: 6379
+    database: 2
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
