--- a/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
@@ -29,3 +29,9 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: classpath*:mapper/*.xml
+user:
+  thread-pool:
+    core-pool-size: 12
+    max-pool-size: 24
+    work-queue-size: 1000
+    keep-alive-seconds: 300
