--- a/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
@@ -12,6 +12,8 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/new_retail_product?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
