--- a/new-retail-service/new-retail-service-cart/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-cart/src/main/resources/bootstrap.yml
@@ -12,6 +12,8 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+  main:
+    allow-bean-definition-overriding: true
   redis:
     host: localhost
     port: 6379
