--- a/new-retail-common/new-retail-common-core/pom.xml
+++ b/new-retail-common/new-retail-common-core/pom.xml
@@ -44,6 +44,13 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+
+        <!-- JSON 序列化工具 -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
 </project>
