--- a/new-retail-common/new-retail-common-rabbitmq/pom.xml
+++ b/new-retail-common/new-retail-common-rabbitmq/pom.xml
@@ -3,24 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>new-retail-cloud</artifactId>
+        <artifactId>new-retail-common</artifactId>
         <groupId>com.zhihao</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>new-retail-common</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>new-retail-common-redis</module>
-        <module>new-retail-common-security</module>
-        <module>new-retail-common-core</module>
-        <module>new-retail-common-rabbitmq</module>
-    </modules>
+    <artifactId>new-retail-common-rabbitmq</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
