--- a/new-retail-auth/pom.xml
+++ b/new-retail-auth/pom.xml
@@ -27,6 +27,12 @@
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-security</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
