--- a/new-retail-service/new-retail-service-cart/pom.xml
+++ b/new-retail-service/new-retail-service-cart/pom.xml
@@ -25,12 +25,6 @@
 
         <dependency>
             <groupId>com.zhihao</groupId>
-            <artifactId>new-retail-api-cart</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -38,6 +32,22 @@
         <dependency>
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-redis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-api-cart</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
