--- a/new-retail-service/new-retail-service-order/pom.xml
+++ b/new-retail-service/new-retail-service-order/pom.xml
@@ -27,6 +27,28 @@
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-security</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-redis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-rabbitmq</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
@@ -50,12 +72,6 @@
         <dependency>
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-api-coupons</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.zhihao</groupId>
-            <artifactId>new-retail-common-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
