--- a/new-retail-service/new-retail-service-order/pom.xml
+++ b/new-retail-service/new-retail-service-order/pom.xml
@@ -53,6 +53,12 @@
 
         <dependency>
             <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-api-order</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
             <artifactId>new-retail-api-cart</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
