--- a/new-retail-gateway/src/main/resources/bootstrap.yml
+++ b/new-retail-gateway/src/main/resources/bootstrap.yml
@@ -51,3 +51,8 @@ spring:
           uri: lb://new-retail-rbac
           predicates:
             - Path=/rbac/**
+
+        - id: new-retail-message
+          uri: lb://new-retail-message
+          predicates:
+            - Path=/message/**
