--- a/new-retail-service/new-retail-service-message/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-message/src/main/resources/bootstrap.yml
@@ -1,10 +1,10 @@
 server:
-  port: 4400
+  port: 4800
   servlet:
-    context-path: /order
+    context-path: /message
 spring:
   application:
-    name: new-retail-order
+    name: new-retail-message
   cloud:
     nacos:
       discovery:
@@ -16,7 +16,7 @@ spring:
     allow-bean-definition-overriding: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/new_retail_order?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://localhost:3306/new_retail_message?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
     username: root
     password: root
     hikari:
@@ -25,10 +25,6 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
-  redis:
-    host: 192.168.43.2
-    port: 6379
-    database: 2
   rabbitmq:
     host: 192.168.43.2
     port: 5672
@@ -46,9 +42,3 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: classpath*:mapper/*.xml
-order:
-  thread-pool:
-    core-pool-size: 12
-    max-pool-size: 24
-    work-queue-size: 1000
-    keep-alive-seconds: 300
