--- a/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
@@ -14,7 +14,7 @@ spring:
         file-extension: yml
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/new_retail_coupons?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://192.168.43.2:3306/new_retail_coupons?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
     username: root
     password: root
     hikari:
