--- a/new-retail-service/new-retail-service-rbac/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-rbac/src/main/resources/bootstrap.yml
@@ -26,4 +26,5 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath*:mapper/*.xml
