feat(SysUserFeignController):getSysUserApiVO

--- a/new-retail-api/new-retail-api-rbac/pom.xml
+++ b/new-retail-api/new-retail-api-rbac/pom.xml
@@ -3,22 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>new-retail-cloud</artifactId>
+        <artifactId>new-retail-api</artifactId>
         <groupId>com.zhihao</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>new-retail-api</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>new-retail-api-user</module>
-        <module>new-retail-api-product</module>
-        <module>new-retail-api-coupons</module>
-        <module>new-retail-api-cart</module>
-        <module>new-retail-api-order</module>
-        <module>new-retail-api-rbac</module>
-    </modules>
+    <artifactId>new-retail-api-rbac</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
