--- a/new-retail-auth/pom.xml
+++ b/new-retail-auth/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>new-retail-api-user</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-api-rbac</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
