--- a/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
@@ -47,7 +47,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
   rabbitmq:
-    host: 192.168.43.2
+    host: localhost
     port: 5672
     username: guest
     password: guest
