--- a/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
@@ -20,13 +20,13 @@ spring:
       master:
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: jdbc:mysql://192.168.43.2:3306/new_retail_user?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+        jdbc-url: jdbc:mysql://127.0.0.1:3306/new_retail_user?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
         username: root
         password: root
       slave-01:
         type: com.zaxxer.hikari.HikariDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        jdbc-url: jdbc:mysql://192.168.43.3:3306/new_retail_user?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
+        jdbc-url: jdbc:mysql://127.0.0.1:3306/new_retail_user?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
         username: root
         password: root
     rules:
@@ -47,7 +47,7 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
   rabbitmq:
-    host: 192.168.43.2
+    host: localhost
     port: 5672
     username: guest
     password: guest
