--- a/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
@@ -47,11 +47,11 @@ spring:
     date-format: yyyy-MM-dd HH:mm:ss
     default-property-inclusion: non_null
   redis:
-    host: 192.168.43.2
+    host: localhost
     port: 6379
     database: 2
   rabbitmq:
-    host: 192.168.43.2
+    host: localhost
     port: 5672
     username: guest
     password: guest
