--- a/new-retail-service/new-retail-service-rbac/pom.xml
+++ b/new-retail-service/new-retail-service-rbac/pom.xml
@@ -52,6 +52,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-api-product</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
