refactor(SysCategoryService):named format

--- a/new-retail-service/new-retail-service-cart/pom.xml
+++ b/new-retail-service/new-retail-service-cart/pom.xml
@@ -55,6 +55,12 @@
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-api-product</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.zhihao</groupId>
+                    <artifactId>new-retail-common-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
