--- a/new-retail-service/new-retail-service-rbac/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-rbac/src/main/resources/bootstrap.yml
@@ -12,6 +12,10 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 100MB
   main:
     allow-bean-definition-overriding: true
   datasource:
