--- a/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
@@ -12,6 +12,10 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: localhost:8080
   shardingsphere:
     datasource:
       names: master,slave-01
@@ -48,3 +52,11 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: classpath*:mapper/*.xml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+feign:
+  sentinel:
+    enabled: true
