--- a/new-retail-auth/src/main/resources/bootstrap.yml
+++ b/new-retail-auth/src/main/resources/bootstrap.yml
@@ -12,11 +12,23 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: localhost:8080
   main:
     allow-bean-definition-overriding: true
   redis:
     host: localhost
     port: 6379
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+feign:
+  sentinel:
+    enabled: true
 my:
   name: zhangsan
   age: 20
