--- a/new-retail-gateway/src/main/resources/bootstrap.yml
+++ b/new-retail-gateway/src/main/resources/bootstrap.yml
@@ -10,6 +10,10 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: localhost:8080
     gateway:
       routes:
         - id: new-retail-auth
