--- a/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
@@ -12,6 +12,10 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: localhost:8080
   main:
     allow-bean-definition-overriding: true
   shardingsphere:
@@ -62,6 +66,11 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations: classpath*:mapper/*.xml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 alipay:
   pc:
     gateway: gatewayUrl
