--- a/new-retail-auth/pom.xml
+++ b/new-retail-auth/pom.xml
@@ -46,6 +46,17 @@
             <artifactId>new-retail-api-rbac</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- sentinel 组件 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
