--- a/new-retail-service/new-retail-service-cart/pom.xml
+++ b/new-retail-service/new-retail-service-cart/pom.xml
@@ -57,6 +57,17 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- sentinel 组件 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
