--- a/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-pay/src/main/resources/bootstrap.yml
@@ -71,6 +71,9 @@ management:
     web:
       exposure:
         include: "*"
+feign:
+  sentinel:
+    enabled: true
 alipay:
   pc:
     gateway: gatewayUrl
