--- a/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
@@ -76,6 +76,9 @@ management:
     web:
       exposure:
         include: "*"
+feign:
+  sentinel:
+    enabled: true
 order:
   thread-pool:
     core-pool-size: 12
