--- a/new-retail-service/new-retail-service-user/pom.xml
+++ b/new-retail-service/new-retail-service-user/pom.xml
@@ -47,6 +47,12 @@
 
         <dependency>
             <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-file</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
             <artifactId>new-retail-api-user</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -55,6 +61,22 @@
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-api-coupons</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-api-file</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.github.openfeign.form</groupId>
+                    <artifactId>feign-form</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.github.openfeign.form</groupId>
+                    <artifactId>feign-form-spring</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
