feat(common-redis):redisson

--- a/new-retail-common/new-retail-common-security/pom.xml
+++ b/new-retail-common/new-retail-common-security/pom.xml
@@ -27,6 +27,12 @@
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.redisson</groupId>
+                    <artifactId>redisson</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- JWT -->
