--- a/new-retail-service/new-retail-service-order/pom.xml
+++ b/new-retail-service/new-retail-service-order/pom.xml
@@ -43,6 +43,12 @@
             <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.redisson</groupId>
+                    <artifactId>redisson</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
