fix(PayMessageCallbackConfig):concurrent data loss

--- a/new-retail-service/new-retail-service-pay/pom.xml
+++ b/new-retail-service/new-retail-service-pay/pom.xml
@@ -25,6 +25,12 @@
 
         <dependency>
             <groupId>com.zhihao</groupId>
+            <artifactId>new-retail-common-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zhihao</groupId>
             <artifactId>new-retail-common-rabbitmq</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
