feat(maven-plugin):jar outputDirectory

--- a/new-retail-service/new-retail-service-admin/pom.xml
+++ b/new-retail-service/new-retail-service-admin/pom.xml
@@ -163,6 +163,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <outputDirectory>D:\jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
