--- a/new-retail-service/new-retail-service-file/pom.xml
+++ b/new-retail-service/new-retail-service-file/pom.xml
@@ -48,6 +48,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <outputDirectory>D:\jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
