--- a/new-retail-service/new-retail-service-pay/pom.xml
+++ b/new-retail-service/new-retail-service-pay/pom.xml
@@ -141,6 +141,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <outputDirectory>D:\jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
