--- a/new-retail-service/new-retail-service-user/pom.xml
+++ b/new-retail-service/new-retail-service-user/pom.xml
@@ -139,6 +139,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <outputDirectory>D:\jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
