--- a/new-retail-auth/pom.xml
+++ b/new-retail-auth/pom.xml
@@ -77,6 +77,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <outputDirectory>D:\jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
