--- a/new-retail-gateway/pom.xml
+++ b/new-retail-gateway/pom.xml
@@ -51,6 +51,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <outputDirectory>D:\jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
