--- a/new-retail-service/new-retail-service-order/pom.xml
+++ b/new-retail-service/new-retail-service-order/pom.xml
@@ -154,6 +154,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <outputDirectory>D:\jar</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
