--- a/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-coupons/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 server:
   port: 4600
   servlet:
-    context-path: /coupons
+    context-path: /new-retail-coupons
 spring:
   application:
     name: new-retail-coupons
