--- a/new-retail-service/new-retail-service-file/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-file/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 server:
   port: 4800
   servlet:
-    context-path: /file
+    context-path: /new-retail-file
 spring:
   application:
     name: new-retail-file
