--- a/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-order/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 server:
   port: 4400
   servlet:
-    context-path: /order
+    context-path: /new-retail-order
 spring:
   application:
     name: new-retail-order
