--- a/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-product/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 server:
   port: 4200
   servlet:
-    context-path: /product
+    context-path: /new-retail-product
 spring:
   application:
     name: new-retail-product
