--- a/new-retail-auth/src/main/resources/bootstrap.yml
+++ b/new-retail-auth/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 server:
   port: 4000
   servlet:
-    context-path: /auth
+    context-path: /new-retail-auth
 spring:
   application:
     name: new-retail-auth
