--- a/new-retail-service/new-retail-service-cart/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-cart/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 server:
   port: 4300
   servlet:
-    context-path: /cart
+    context-path: /new-retail-cart
 spring:
   application:
     name: new-retail-cart
