--- a/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
+++ b/new-retail-service/new-retail-service-user/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 server:
   port: 4100
   servlet:
-    context-path: /user
+    context-path: /new-retail-user
 spring:
   application:
     name: new-retail-user
